<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

	<LinearLayout android:orientation="horizontal"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content">
			<TextView android:paddingTop="10px" 
						android:shadowDx="1" 
						android:id="@+id/displayText" 
						android:textColor="@color/display_text_header" 
						android:shadowRadius="2.5" 
						android:shadowDy="1" 
						android:text="@string/ringToneTitleText" 
						android:typeface="normal" 
						android:shadowColor="#000000" 
						android:gravity="left" 
						android:textSize="35px" 
						android:layout_height="wrap_content" 
						android:layout_gravity="left" 
						android:layout_weight="0" 
						android:layout_width="wrap_content" 
						android:layout_marginLeft="15px"
					    />
			<TextView android:paddingTop="10px" 
						android:shadowDx="1" 
						android:id="@+id/displayTimer" 
						android:textColor="@color/display_text_header" 
						android:shadowRadius="2.5" 
						android:shadowDy="1" 
						android:typeface="normal" 
						android:shadowColor="#000000" 
						android:gravity="left" 
						android:textSize="35px" 
						android:layout_height="wrap_content" 
						android:layout_gravity="right" 
						android:layout_weight="0" 
						android:layout_width="fill_parent" 
						android:layout_marginLeft="15px"
						android:text="" 
					    />
	</LinearLayout>		
	<View android:layout_width="fill_parent" android:layout_height="2dip" android:background="#AA000000" />		    
	<LinearLayout android:orientation="horizontal" 
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginLeft="15px"
				    android:layout_marginBottom="5px"
				    android:layout_marginTop="5px"
				    android:id="@+id/topButtonsLayout"
				    >
			<ImageButton android:src="@drawable/timer_disabled" 
					android:id="@+id/btn_stopTimer" 
					android:paddingTop="10px"
					android:layout_height="wrap_content" 
					android:layout_gravity="right" 
					android:layout_marginRight="15px"
					android:layout_width="wrap_content" 
					android:layout_weight="1"
					android:background="@null"
					android:onClick="onStopTimer"
					/>
			<ImageButton android:src="@drawable/prefernces_icon" 
					android:id="@+id/btn_stopTimer" 
					android:paddingTop="10px"
					android:layout_height="wrap_content" 
					android:layout_gravity="right" 
					android:layout_marginRight="15px"
					android:layout_width="wrap_content" 
					android:layout_weight="1"
					android:background="@null"
					android:onClick="onStartPreferences"
					/>
			<ImageButton android:src="@drawable/exit" 
					android:id="@+id/btn_exit" 
					android:paddingTop="10px"
					android:layout_height="wrap_content" 
					android:layout_gravity="right" 
					android:layout_marginRight="15px"
					android:layout_width="wrap_content" 
					android:layout_weight="1"
					android:background="@null"
					android:onClick="onExit"
					/>
			<ImageView android:src="@drawable/title_icon2" 
					android:id="@+id/imageView1" 
					android:paddingTop="10px"
					android:layout_height="wrap_content" 
					android:layout_gravity="right" 
					android:layout_marginRight="15px"
					android:layout_width="wrap_content" 
					android:layout_weight="1"
					/>
	</LinearLayout>
<!--  Buttons -->
	
	<LinearLayout   android:id="@+id/button_layout"
					android:orientation="vertical"
				    android:layout_width="fill_parent"
				    android:layout_height="fill_parent"
				    android:paddingTop="10px"
				    >

		<Button android:text="@string/textRingAndVibrate" 
			android:id="@id/btn_profile01"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="center_horizontal|fill_vertical"
			android:textColor="@color/display_text_button"
			android:textSize="25px"
			android:onClick="onRingAndVibrate"
			android:longClickable="true"
			android:layout_marginTop="15px" 
			android:layout_marginLeft="15px" 
			android:layout_marginRight="15px"
			android:height="100px"
			style="@style/CustomButton"
		/>
	
		<Button android:text="@string/textRingOnly" 
			android:id="@+id/btn_profile02"
			android:layout_span="1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textColor="@color/display_text_button"
			android:textSize="25px"
			android:onClick="onRingOnly"
			android:layout_marginTop="10px" 
			android:layout_marginLeft="15px" 
			android:layout_marginRight="15px" 
			android:height="100px"
			style="@style/CustomButton"
		/>

		<Button android:text="@string/textVibrateOnly" 
			android:id="@+id/btn_profile03"
			android:layout_span="1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:textColor="@color/display_text_button"
			android:textSize="25px"
			android:onClick="onVibrateOnly"
			android:layout_marginTop="10px" 
			android:layout_marginLeft="15px" 
			android:layout_marginRight="15px" 
			android:height="100px"
			style="@style/CustomButton"
		/>
			
		<Button android:text="@string/textSilent" 
			android:id="@+id/btn_profile04"
			android:layout_span="1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="center_horizontal|fill_vertical"
			android:textColor="@color/display_text_button"
			android:textSize="25px"
			android:onClick="onSilent"
			android:layout_marginTop="10px" 
			android:layout_marginLeft="15px" 
			android:layout_marginRight="15px" 
			style="@style/CustomButton"
		/>

		<Button android:text="@string/textAirplaneOff" 
			android:id="@+id/btn_airplane"
			android:layout_span="1"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
			android:gravity="center_horizontal|fill_vertical"
			android:textColor="@color/display_text_button"
			android:textSize="25px"
			android:onClick="onAirplane"
			android:layout_marginTop="10px" 
			android:layout_marginLeft="15px" 
			android:layout_marginRight="15px" 
			android:visibility="invisible"
			style="@style/CustomButton"
		/>
	</LinearLayout>
	
</LinearLayout>
